# semantic-cache

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: ADVANCED.md  MODELS.md  QUICKSTART.md
scripts/: demo.py
src/semantic_cache/: __init__.py  cache.py  config.py  embeddings.py  evaluator.py  models.py
src/semantic_cache/api/: __init__.py  app.py  dependencies.py
src/semantic_cache/dto/: __init__.py  requests.py  responses.py
src/semantic_cache/entities/: __init__.py  cache_entry.py  cache_match.py
src/semantic_cache/handlers/: __init__.py  cache_handler.py
src/semantic_cache/protocols/: __init__.py  cache_store.py  embedding_provider.py
src/semantic_cache/repositories/: __init__.py  gemma_embedding_provider.py  local_embedding_provider.py  ollama_embedding_provider.py  redis_repository.py
src/semantic_cache/services/: __init__.py  cache_service.py
src/semantic_cache/utils/: __init__.py  evaluator.py
tests/: test_api.py
